--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="bg-light">
@@ -23,6 +27,30 @@
             <!-- jsで追加 -->
         </ul>
     </div>
+
+    <footer class="container-fluid mt-5 text-center">
+        <div class="row">
+            <ul class="nav justify-content-center py-5 text-center">
+                <li class="nav-item">
+                    <a class="nav-link link-secondary fs-3" href="https://github.com/reno01111/todo-list.git" target="_blank"><i
+                            class="fa-brands fa-github"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link link-secondary" href="https://x.com/reno_ma1n" target="_blank">dev Twitter</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link link-secondary" href="https://youtu.be/E08jeQBa1D0?si=jr5JykSsdswpOwY9" target="_blank">Practice movie</a>
+                </li>
+            </ul>
+            <div class="col-10 offset-1">
+                <a class="px-2 link-secondary" href="#"><span class="bi bi-instagram"></span></a>
+                <a class="px-2 link-secondary" href="#"><span class="bi bi-youtube"></span></a>
+                <a class="px-2 link-secondary" href="#"><span class="bi bi-twitter"></span></a>
+                <a class="px-2 link-secondary" href="#"><span class="bi bi-facebook"></span></a>
+            </div>
+        </div>
+        <small>&copy; 2024 Practice site. by reno</small>
+    </footer>
 
     <script src="./main.js"></script>
 </body>
